# create-pywire-app

./: .coverage  .gitignore  README.md  noxfile.py  pyproject.toml  tox.ini
scripts/: check  coverage  install  lint  test
src/create_pywire_app/: __init__.py  _version.py  main.py
src/create_pywire_app/templates/blog/explicit/: about.wire  blog-posts.wire  home.wire  layout.wire.j2
src/create_pywire_app/templates/blog/path-based/: __layout__.wire.j2  index.wire  posts__layout__.wire.j2  posts_index.wire  posts_slug.wire
src/create_pywire_app/templates/common/: Dockerfile  README.md.j2  __error__.wire  main-explicit.py.j2  main-path.py.j2  pyproject.toml.j2  render.yaml.j2
src/create_pywire_app/templates/counter/explicit/: home.wire
src/create_pywire_app/templates/counter/path-based/: __layout__.wire.j2  index.wire
src/create_pywire_app/templates/saas/: models.py
src/create_pywire_app/templates/saas/explicit/: dashboard-pages.wire  landing.wire  login.wire  pricing.wire
src/create_pywire_app/templates/saas/path-based/: __layout__.wire.j2  dashboard__layout__.wire.j2  dashboard_index.wire  dashboard_settings.wire  index.wire  login.wire  pricing.wire
src/create_pywire_app/templates/skeleton/: index.wire.j2
tests/: test_smoke.py
