[project]
name = "create-pywire-app"
version = "0.1.0"
description = "Init wizard for new pywire projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.scripts]
create-pywire-app = "create_pywire_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/create_pywire_app"]
