[project]
name = "create-pywire-app"
version = "0.1.2"
description = "Init wizard for new pywire projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "jinja2>=3.1.0",
]

[project.scripts]
create-pywire-app = "create_pywire_app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "tox>=4.0.0",
    "tox-uv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/create_pywire_app"]

[tool.hatch.build.targets.wheel.shared-data]
"src/create_pywire_app/templates" = "share/create_pywire_app/templates"

[tool.hatch.build.targets.sdist]
include = [
    "src/create_pywire_app/**",
    "tests/**",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.mypy]
exclude = [
    "src/create_pywire_app/templates",
]
